# pflow

./: .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
